2007-07-27  Thorsten Kukuk <kukuk@suse.de>

	* release version 0.21

	* po/*.po: Add translations

2007-07-24  Sven Schober <sschober@suse.de>
	* src/pam-module.h: Minor modification to debug macro.
	* src/write_config.c: Fixed a bug where uid, gui and st_mode
	where set to unsensible values when file didn't exist yet.

2007-07-23  Sven Schober <sschober@suse.de>
	* src/pam-module.h: Added doxygen documentation.
	* src/single_config.c: Documentation and conveniance
	functions. 
	* src/pam-config.c: Changed pam_mount support to single
	service file.
	* src/mod_pam_cryptpass.c: Added support for pam_cryptpass.
	* src/pam-config.h: Added doxygen documentation.
	* src/mod_pam_mount.c: Changed pam_mount support to single
	service file.
	* src/supported-modules.h: --- " ----

2007-07-18  Michael Calmer <mc@suse.de>
	* src/mod_pam_deny.c: New.
	* src/supported-modules.h: Added pam_deny.so.
	* src/mod_pam_krb5.c: If pam_krb5 is the last enabled module add
	a required pam_deny.so to the end of the AUTH section.

2007-07-05  Thorsten Kukuk  <kukuk@suse.de>

	* src/pam-config.8.xml: Remove obsoete xauth entry.

2007-07-05  Sven Schober  <sschober@suse.de>
	* src/mod_pam_unix.c: Changed option "big_crypt" to
	"bigcrypt".
	* src/mod_pam_mount.c: New.
	* src/pam-config.c: Added options for pam_mount.so.
	* src/mod_pam_unix.c: Added support for pam_mount.so:
	"use_first_pass" gets appended if pam_mount.so is enabled.
	* src/mod_pam_unix2.c: same as above.
	* src/pam-config.8.xml: Added documentation for pam_mount.so
	and pam_unix.so.
	* src/supported-modules.h: Added pam_mount.so to
	common_module_list, auth and session list. 
	* src/Makefile.am: Added mod_pam_mount.c. 

2007-07-04  Sven Schober  <sschober@suse.de>

	* src/mod_pam_unix.c: New. 
	* src/sanity_checks.c: Added check for pam_unix/2-conflict
	and fallback to pam_unix2.so.
	* src/pam-config.c: Added options for pam_unix.so.
	* src/supported-modules.h: Added pam_unix.so to
	module-lists.
