@@ -1,3 +1,14 @@
+2007-07-27  Sven Schober <sschober@suse.de>
+	* pam-config.c: Added check if (single) service file exists
+	before beginning to write.
+	* mod_pam_lastlog.c: Check file pointer before using it.
+	* single_config.c: Check file pointer before using it and
+	print error message if service file can't be 'stat'ed.
+	* mod_pam_mount.c:  Check file pointer before using it.
+	* mod_pam_loginuid.c: Check file pointer before using it.
+	* write_config.c: Call get{g,u}id() for default {g,u}id
+	values.
+
 2007-07-27  Thorsten Kukuk <kukuk@suse.de>
 
 	* release version 0.21
